--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.5",
     "@astrojs/check": "^0.8.0",
-    "typescript": "^5.5.3"
+    "@astrojs/mdx": "^3.1.2",
+    "@astrojs/vue": "^4.5.0",
+    "astro": "^4.11.5",
+    "typescript": "^5.5.3",
+    "vue": "^3.4.31"
   }
 }
