--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "unplugin-vue-components": "^0.27.2",
     "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.4.31"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4"
   }
 }
