--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "dayjs": "^1.11.11",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
+  },
+  "engines": {
+    "node": ">=22.4.0",
+    "npm": ">=10.8.1",
+    "pnpm": ">=9.4.0"
   }
 }
