--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.19.1",
     "astro": "^4.11.5",
     "element-plus": "^2.7.6",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.77.7",
